fixing bug on mobile for the aboutme page + adding a CSS normalize

--- a/src/component/App/Homepage/styles.scss
+++ b/src/component/App/Homepage/styles.scss
@@ -6,7 +6,7 @@
 .homepage-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: 2em;
     padding: 2em;
